# CG2020

./: .clang-format  .gitignore  .gitmodules  readme.org
CCGHomework_skeleton/: CMakeLists.txt
CCGHomework_skeleton/KoebeIteration/: CMakeLists.txt  README.md
CCGHomework_skeleton/KoebeIteration/include/: CircularSlitMap.h  HoleFiller.h  SlitMap.h
CCGHomework_skeleton/KoebeIteration/src/: CircularSlitMap.cpp  HoleFiller.cpp  Viewer.cpp
CCGHomework_skeleton/cutgraph/: CMakeLists.txt  cmake_install.cmake
CCGHomework_skeleton/cutgraph/cutgraph/: cmake_install.cmake
CCGHomework_skeleton/cutgraph/include/: CutGraph.h  CutGraphMesh.h
CCGHomework_skeleton/cutgraph/src/: CutGraph.cpp  Viewer.cpp
CCGHomework_skeleton/data/: boy.m  demo_boy.bat  demo_girl.bat
CCGHomework_skeleton/data/boy_3_holes/: punch_holes.sh
CCGHomework_skeleton/data/girl_3_holes/: fill_holes.bat  fill_holes.sh  koebe_iteration_test.bat  koebe_iteration_test.sh  punch_holes.bat  step_0.m
CCGHomework_skeleton/harmonic_map/: CMakeLists.txt  README.md
CCGHomework_skeleton/harmonic_map/include/: HarmonicMap.h  HarmonicMapMesh.h
CCGHomework_skeleton/harmonic_map/src/: HarmonicMap.cpp  Viewer.cpp
CCGHomework_skeleton/hodge_decomposition/include/: HodgeDecomposition.h  HodgeDecompositionMesh.h  WedgeProduct.h
CCGHomework_skeleton/hodge_decomposition/src/: HodgeDecomposition.cpp  Viewer.cpp
CCGHomework_skeleton/ot_2d/include/: CDomainOptimalTransport.h  Detri2Mesh.h  OT.h  OTMesh.h
CCGHomework_skeleton/ot_2d/src/: CDomainOptimalTransport.cpp  OT.cpp  Viewer.cpp
CCGHomework_skeleton/spherical_harmonic_map/include/: SphericalHarmonicMap.h  SphericalHarmonicMapMesh.h
CCGHomework_skeleton/spherical_harmonic_map/src/: SphericalHarmonicMap.cpp  Viewer.cpp
